--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -3,5 +3,5 @@ addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
 db_host = db
 db_port = 5432
 db_user = odoo
-db_password = ${DB_PASSWORD}
-admin_passwd = ${ADMIN_PASSWORD}
+db_password = supersecret
+admin_passwd = superadmin123
