--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       POSTGRES_DB: odoo
       POSTGRES_USER: odoo
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_PASSWORD: supersecret
     volumes:
       - db-data:/var/lib/postgresql/data
 
@@ -16,11 +16,13 @@ services:
     restart: unless-stopped
     depends_on:
       - db
+    ports:
+      - "8069:8069" 
     environment:
       - DB_HOST=db
       - DB_USER=odoo
-      - DB_PASSWORD=${DB_PASSWORD}
-      - ADMIN_PASSWD=${ADMIN_PASSWORD}
+      - DB_PASSWORD=supersecret
+      - ADMIN_PASSWD=superadmin123
     volumes:
       - ./config/odoo.conf:/etc/odoo/odoo.conf:ro
       - ./addons:/mnt/extra-addons
